src/test/deca/syntax/valid/bge_float_bge_string.deca
// Description :
// 
//      Test syntaxiquement correct de 2.5>="Bonjour"
// 
// Résultats : 
// 
//      N/A
// 
// Historique : 
// 
//      Créé le 09/06/2023 par gl03

{
    boolean y = 2.5>="Bonjour";
}

