src/test/deca/syntax/invalid/ble_ble_invalid_syntax.deca
// Description : 
// 
//      Test syntaxiquement incorrect qui ne reconnaît pas "=<"
// 
// Resultat : 
// 
//      N/A 
// 
// Historique : 
// 
//      Créé le 09/06/2023 par gl03

{
    =<;
}
